  keyword separator characters. Now, any non-alphanumeric character,
  that does not appear in a keyword string or the "noWordSep"
  buffer-local property is automatically treated like it had a sequence
  rule.

- Added FORTRAN syntax highlighting (Joseph Schroer)
  Added Interilis syntax highlighting (Claude Eisenhut)
  Updated PL-SQL mode (Steve Snider)
  Updated NetRexx mode (Patric Bechtel)

- Improved loading time of plain text files if 'more accurate syntax
  highlighting' is on.

+ User Interface Changes:

- Search bar no longer takes up the full width of the view. This saves
  some screen space.

- Status bar looks somewhat different now, and shows the word wrap mode
  and line separator status.

- The text color and style used to show the "[n lines]" string can now
  be set independently of the EOL marker color.

- Plugin manager window can be closed by pressing Escape.

- Open buffers are shown with a different icon in the file system
  browser.

- New splash screen and about box. (Kris Kopicki)

+ OS-specific Changes:

- MacOS plugin version 1.2 adds an option pane with a few settings, and
  some bug fixes and cleanups. (Kris Kopicki)

- On Unix, the installer now defaults to installing in the user's home
  directory when running as a non-root user.

+ Bug Fixes:

- A single invalid file system browser coloring regular expression no
  longer stops the remaining expressions from being loaded.

- Select Open File; press Enter first; then choose a file to open. Bang,
  an error message. Now fixed.

- Fixed a bug in the undo request merging code that would occur
  sometimes when multiple consecutive pieces of text were removed one
  after the other.

- Fixed a bug in the undo request merging code that would occur when
  a selection was replaced with some text.

- If the splash screen was disabled, running jEdit with the -nogui and
  -nobackground command line arguments didn't work, because the AWT